--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                         <configuration>
                             <rules>
                                 <rule>
-                                    <element>BRANCH</element>
+                                    <element>CLASS</element>
                                     <limits>
                                         <limit>
                                             <counter>BRANCH</counter>
@@ -89,6 +89,7 @@
                             </rules>
                         </configuration>
                     </execution>
+
                 </executions>
             </plugin>
         </plugins>
